update jvm 参数